TestSuite/errors/err0070.pas
  	 var o : object;
begin
writeln(System.Void(o));
end.